--- a/index.html
+++ b/index.html
@@ -9,18 +9,52 @@
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Tiny5&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Tiny5&display=swap"
+        rel="stylesheet">
     <title>Carrinho de Compras</title>
 </head>
 
 <body>
+    <header>
+        <img src="./img/carrinho.jpg" alt=" carrinho">
+        <h1>Carrinho de Compras</h1>
+    </header>
 
+    <div class="Container">
+        <section class="produtos">
+            <ul>
+                <li>Produtos
+                    <form action="search">
+                        <input type="text" placeholder="Selecionar produtos">
+                        <select name="" id="">
+                        </select>
+                    </form>
+                </li>
+                <li>Quantidade
+                    <form action="search">
+                        <input type="text" placeholder="">
+                        <select name="" id="">
+                        </select>
+                    </form>
+                    <button>Adicionar</button>
+                    <button>limpar</button>
+            </ul>
+            <ul class="ul1">
+                </li>
+                <li>Produtos no Carrinho
+                    <p>____________________</p> <br>
+                    <p> 2x teclado Genérico[preto] - 29,90</p>
+                    <p> 1x mousepad Genérico[preto] - 29,90</p>
+                    <br>
+                    <br>
+                    <p> Total R$69.90</p>
+                </li>
 
+            </ul>
+        </section>
 
-
-
-
-    <script src="./js/script.js"></script>
+        <script src="./js/script.js"></script>
 </body>
 
 </html>
