--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h2 class="subtitle">Produtos</h2>
                 <select>
                     <option selected disabled value="">Selecionar Produto</option>
-                    <option value="Mouse Simples">Teclado Genérico (Preto) - R$ 29,90</option>
+                    <option value="Teclado Genérico (Preto) - R$ 29,90">Teclado Genérico (Preto) - R$ 29,90</option>
                     <option value="Teclado Logitech">Teclado Logitech (Preto) - R$ 69,90</option>
                     <option value="Teclado Microsoft">Teclado Microsoft (Preto) - R$ 129,90</option>
                     <option value="Mouse Genérico">Mouse Genérico (Preto) - R$ 19,90</option>
@@ -38,8 +38,8 @@
                     <input type="number" min="1" name="qty" id="qty">
                 </form>
                 <div class="buttons">
-                    <a href="" class="btn add">Adicionar</a>
-                    <a href="" class="btn clear">Limpar</a>
+                    <a href="#" class="btn add">Adicionar</a>
+                    <a href="#" class="btn clear">Limpar</a>
                 </div>
             </div>
 
@@ -47,10 +47,16 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Descrição</th>
+                            <th class="start">Descrição</th>
                             <th>Valor</th>
                             <th>Qtd.</th>
                             <th>Total</th>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
                         </tr>
                     </thead>
                 </table>
