--- a/index.html
+++ b/index.html
@@ -17,35 +17,42 @@
 
 <body>
     <header>
-        <img src="./img/carrinho.jpg" alt=" carrinho">
-        <h1>Carrinho de Compras</h1>
+
+        <h1> <img src="./img/carrinho3.png"  alt=" logo">Carrinho de Compras</h1>
+
     </header>
 
     <div class="Container">
         <section class="produtos">
             <ul>
-                <li>Produtos
+                <li > Produtos
                     <form action="search">
-                        <input type="text" placeholder="Selecionar produtos">
                         <select name="" id="">
+                            <option value=""> Selecionar produtos</option>
+                            <option value=""> Genérico - R$ 9,90 </option>
+                            <option value=""> Teclado Genérico[preto] - R$ 29,90</option>
+                            <option value=""> Mousepad Genérico[preto] - R$ 29,90</option>
+                            <option value=""> Teclado Microsoft (Preto) - R$ 129,90</option>
+                            <option value=""> Mouse Genérico (Preto) - R$ 19,90</option>
+                            <option value=""> Mouse Microsoft (Preto) - R$ 69,90</option>
                         </select>
                     </form>
                 </li>
-                <li>Quantidade
-                    <form action="search">
-                        <input type="text" placeholder="">
-                        <select name="" id="">
-                        </select>
+                <li> Quantidade
+                    <form action="search ">
+                        <input class="qtde" type="number" name="" id="">
                     </form>
-                    <button>Adicionar</button>
-                    <button>limpar</button>
+                        <button>Adicionar</button>
+                        <button>limpar</button>
+                </li>
             </ul>
             <ul class="ul1">
                 </li>
-                <li>Produtos no Carrinho
-                    <p>____________________</p> <br>
-                    <p> 2x teclado Genérico[preto] - 29,90</p>
-                    <p> 1x mousepad Genérico[preto] - 29,90</p>
+                <li>  <b>Produtos do <br> seu <br> Carrinho</b> <br><img src="./img/carrinho.jpg" alt=" carrinho"> 
+                    
+                    <p> <b>____________________</p>
+                  
+
                     <br>
                     <br>
                     <p> Total R$69.90</p>
