--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
         <section class="cart">
             <div class="card product">
                 <h2 class="subtitle">Produtos</h2>
-                <select>
+                <select id="productSelect">
                     <option selected disabled value="">Selecionar Produto</option>
                     <option value="Teclado Genérico (Preto) - R$ 29,90">Teclado Genérico (Preto) - R$ 29,90</option>
-                    <option value="Teclado Logitech">Teclado Logitech (Preto) - R$ 69,90</option>
-                    <option value="Teclado Microsoft">Teclado Microsoft (Preto) - R$ 129,90</option>
-                    <option value="Mouse Genérico">Mouse Genérico (Preto) - R$ 19,90</option>
-                    <option value="Mouse Microsoft">Mouse Microsoft (Preto) - R$ 69,90</option>
-                    <option value="MousePad Genérico">MousePad Genérico - R$ 9,90</option>
+                    <option value="Teclado Logitech (Preto) - R$ 69,90">Teclado Logitech (Preto) - R$ 69,90</option>
+                    <option value="Teclado Microsoft (Preto) - R$ 129,90">Teclado Microsoft (Preto) - R$ 129,90</option>
+                    <option value="Mouse Genérico (Preto) - R$ 19,90">Mouse Genérico (Preto) - R$ 19,90</option>
+                    <option value="Mouse Microsoft (Preto) - R$ 69,90">Mouse Microsoft (Preto) - R$ 69,90</option>
+                    <option value="MousePad Genérico - R$ 9,90">MousePad Genérico - R$ 9,90</option>
                 </select>
                 <h2 class="subtitle">Quantidade</h2>
                 <form action="">
-                    <input type="number" min="1" name="qty" id="qty">
+                    <input type="number" min="1" value="1" id="qty">
                 </form>
                 <div class="buttons">
                     <a href="#" class="btn add">Adicionar</a>
@@ -44,23 +44,22 @@
             </div>
 
             <div class="card description">
-                <table>
+                <table class="cartTable">
                     <thead>
                         <tr>
-                            <th class="start">Descrição</th>
+                            <th>Descrição</th>
                             <th>Valor</th>
                             <th>Qtd.</th>
                             <th>Total</th>
                         </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
                     </thead>
+
+                    <tbody>
+
+                    </tbody>
                 </table>
             </div>
+            <div class="total" id="totalDisplay">Total: R$ 0,00</div>
         </section>
     </main>
 
